kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanovanjska-kriza
spec:
  selector:
    app: stanovanjska-kriza
  ports:
    - protocol: TCP
      port: 80
